# prbot

./: LICENSE  prbot.cabal  stack.yaml
app/: Main.hs
src/: GetRepoPullRequests.hs  GetUserRepos.hs  Lib.hs
