name:                prbot
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/subshad/prbot#readme
license:             BSD3
license-file:        LICENSE
author:              Jacob Bass
maintainer:          jacob@jacobbass.net
copyright:           MIT
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       GetUserRepos
                     , GetRepoPullRequests
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , text
                     , wreq
                     , aeson
                     , lens
                     , lens-aeson
                     , envparse
                     , optparse-applicative
  default-language:    Haskell2010

executable prbot
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , prbot
                     , envparse
                     , optparse-applicative
  default-language:    Haskell2010

test-suite prbot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , prbot
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/subshad/prbot
